--- a/src/pages/components/footer/videoFooter.css
+++ b/src/pages/components/footer/videoFooter.css
@@ -55,3 +55,13 @@ transform: translateX(100%);
 transform: translateX(-100%);
     }
 }
+
+@media only  screen and (max-width: 440px){
+    .videoFooter{
+        bottom: 27%;
+    }
+    .videoFooterMusic__text{
+        width: 78%;
+    }
+    }
+    
