--- a/src/pages/components/sidebar/videoSidebar.css
+++ b/src/pages/components/sidebar/videoSidebar.css
@@ -1,17 +1,19 @@
-.videoSidebar{
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    color: white;
+.videoSidebar {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  color: white;
+  transform: translateY(-50%);
 }
 
-.videoSidebar__options{
-    padding: 20px;
-    text-align: center;
+.videoSidebar__options {
+  padding: 20px;
+  text-align: center;
 }
 
-@media only  screen and (max-width: 440px){
-    .videoSidebar{
-      top: 46%;
-    }
+@media only screen and (max-width: 440px) {
+  .videoSidebar {
+    top: 46%;
   }
+}
+
